--- a/API Definitions/Synchronous APIs/DocumentManagement.yaml
+++ b/API Definitions/Synchronous APIs/DocumentManagement.yaml
@@ -103,13 +103,11 @@ components:
             items:
               $ref: '#/components/schemas/Document'
   schemas:
-    DocumentToBeCreated:
-      description: A document which should be uploaded and created in the document management system
-      type: object
-
     Document:
       description: A document which can be downloaded and manipulated
       type: object
+      allOf:
+        - $ref: '#/components/schemas/DocumentToBeCreated'
       required:
         - self
       properties:
@@ -118,6 +116,56 @@ components:
           type: string
           format: uuid
           example: 239a2c52-e66c-40d1-bf7f-f61097c49703
+        createdBy:
+          $ref: '#/components/schemas/Reference'
+        createdAt:
+          description: Time when the document has been stored
+          type: string
+          # For string formats see https://swagger.io/docs/specification/data-models/data-types/#string
+          format: date-time
+          example: 2024-01-03T12:56T+01:00
+        updatedBy:
+          $ref: '#/components/schemas/Reference'
+        updatedAt:
+          description: Time when the document has been updated
+          type: string
+          format: date-time
+          example: 2024-01-03T14:35T+01:00
+
+    DocumentToBeCreated:
+      description: A document which should be uploaded and created in the document management system
+      type: object
+      required:
+        - fileName
+        - documentBinary
+      properties:
+        title:
+          description: Title of the document
+          type: string
+          minLength: 2
+          maxLength: 50
+          example: Welcome to DDD
+        fileName:
+          description: File name of the document
+          type: string
+          minLength: 2
+          maxLength: 50
+          example: WelcomeDocument.docx
+        mimeType:
+          description: Mimetype of the document
+          type: string
+          # see https://stackoverflow.com/questions/4212861/what-is-a-correct-mime-type-for-docx-pptx-etc
+          enum:
+            - application/vnd.openxmlformats-officedocument.wordprocessingml.document
+            - application/vnd.openxmlformats-officedocument.presentationml.presentation
+          example: application/vnd.openxmlformats-officedocument.wordprocessingml.document
+        documentBinary:
+          description: Binary of the according document
+          type: string
+          # Base 64 encoded
+          format: byte
+
+
 
     Reference:
       description: Reference to an object to access it directly
@@ -133,6 +181,7 @@ components:
           maxLength: 2054
           enum:
             - Document
+            - User
           example: Document
         id:
           description: Self id of the document
