--- a/API Definitions/Synchronous APIs/DocumentManagement.yaml
+++ b/API Definitions/Synchronous APIs/DocumentManagement.yaml
@@ -4,6 +4,9 @@ info:
   description: API to create and manipulate documents
   version: 1.0.0
 servers:
+# Servers should be filled as good as you can
+# In an early state of work it might be that you don't have a real server name
+# But give it even a mock server name to make the base path explicit
   - url: 'https://apis.mycompany.com/document-management'
   - url: 'https://test.apis.mycompany.com/document-management'
   - url: 'https://dev.apis.mycompany.com/document-management'
