--- a/API Definitions/Synchronous APIs/TaskManagement.yaml
+++ b/API Definitions/Synchronous APIs/TaskManagement.yaml
@@ -4,6 +4,9 @@ info:
   description: APIs to create, manipulate, and monitor tasks
   version: 1.0.0
 servers:
+  # Servers should be filled as good as you can
+  # In an early state of work it might be that you don't have a real server name
+  # But give it even a mock server name to make the base path explicit
   - url: 'https://apis.mycompany.com/task-management'
   - url: 'https://test.apis.mycompany.com/task-management'
   - url: 'https://dev.apis.mycompany.com/task-management'
