--- a/API Definitions/Synchronous APIs/DocumentManagementDesign/DocumentMangementWalkingSkeleton.yaml
+++ b/API Definitions/Synchronous APIs/DocumentManagementDesign/DocumentMangementWalkingSkeleton.yaml
@@ -99,7 +99,8 @@ paths:
       parameters:
         - $ref: '#/components/parameters/Id'
       responses:
-        200: Successful operation
+        200:
+          description: Successful operation
     #######################end####################################
 
 
