--- a/API Definitions/Synchronous APIs/DocumentManagementDesign/DocumentMangementInitialFilling.yaml
+++ b/API Definitions/Synchronous APIs/DocumentManagementDesign/DocumentMangementInitialFilling.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.3
 info:
   # Title can be the name of the bounded context
   title: Document Management
+  # The pipe symbol | can be used to have multi-line descriptions in mark down syntax
   description: |
     Document Management API defined as consumer to upload and download documents
   version: 1.0.0
